<resources>
    <string name="app_name">Covid Watch Arizona</string>
    <string name="title_contact_events">Seen Tags</string>
    <string name="title_my_profile">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_are_you_sick_question">Notify seen tags?</string>
    <string name="title_yes">Yes</string>
    <string name="title_no">No</string>
    <string name="title_clear">Clear</string>
    <string name="title_start_logging">Start</string>
    <string name="title_stop_logging">Stop</string>
    <string name="preference_file_key">org.covidwatch.android.PREFERENCE_FILE_KEY</string>
    <string name="preference_last_contact_events_download_date">preference_last_contact_events_download_date</string>
    <string name="preference_last_temporary_contact_numbers_download_date">preference_last_temporary_contact_numbers_download_date</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Description</string>
    <string name="notification_current_user_was_exposed">You have been notified</string>
    <string name="ok">OK</string>
    <string name="screen_title" />
    <string name="start">Start</string>
    <string name="onboarding_button">Let\'s do this!</string>
    <string name="onboarding_steps">Protect your privacy and your community with just 3 steps.</string>
    <string name="onboarding_step1">Turn on Bluetooth.</string>
    <string name="onboarding_step2">Allow us to send you Push notifications to warn you of potential contact.</string>
    <string name="exposure_information_date">Date</string>
    <string name="datepicker">datePicker</string>
    <string name="textView" />
    <string name="ble_location_permission">The permission to get BLE location data is required</string>
    <string name="foreground_notification_title">Covid Watch is running</string>
    <string name="foreground_notification_ble_off">Covid Watch needs Bluetooth to be turned on</string>
    <string name="not_contacted">You have NOT been contacted.</string>
    <string name="based_on">Based on last 14 days of activity.</string>
    <string name="we_dont_share">We don\'t share with Big Brother.</string>
    <string name="we_dont_share_2">We share with each other.</string>
    <string name="share_sub_text">Ask family and friends to join the Covid Watch Team</string>
    <string name="self_report">Self Report</string>
    <string name="self_report_text">Self Report</string>
    <string name="cancel">Cancel</string>
    <string name="btn_continue">Continue</string>
    <string name="export_possible_exposure_for_test_case">Export Possible Exposure for Test Case</string>
    <string name="test_case_name">Test Case</string>
    <string name="menu_reset_possible_exposures">[DEMO] Reset Possible Exposures</string>
    <string name="menu_detect_exposures_from_server">[DEMO] Detect Exposures from Server</string>
    <string name="menu_export_possible_exposures">[DEMO] Export Possible Exposures</string>
    <string name="menu_possible_exposures">Possible COVID-19 Exposures</string>
    <string name="menu_notify_others">Have a Positive Diagnosis?</string>
    <string name="menu_past_diagnoses">View Past Diagnoses</string>
    <string name="menu_change_region">Change Region</string>
    <string name="menu_how_it_works">How it works</string>
    <string name="menu_covid_watch_website">Covid Watch Website</string>
    <string name="menu_health_guidelines">CDC Health Guidelines</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_terms_of_use">Terms of Service</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_support">Get Support</string>
    <string name="issues_needs_to_be_resolved">The following issue(s) need to be resolved for the app to work properly</string>
    <string name="turn_on_bluetooth">Turn on Bluetooth</string>
    <string name="turn_on_bluetooth_subtext">Bluetooth is required for this app to work</string>
    <string name="location_access_on">Location Access On</string>
    <string name="menu_footer_text">A project in collaboration with</string>
    <string name="stanford_university">Stanford University</string>
    <string name="bluetooth_explanation_subtext">Apps using Bluetooth® Low Energy (BLE) are required to have location access enabled.</string>
    <string name="logo_image_content_descriptor">Covid Watch logo</string>
    <string name="menu_button_content_descriptor">Menu button</string>
    <string name="welcome_back_title">Welcome Back!</string>
    <string name="detected_thank_you_text">Thank you for helping your community stay safe, anonymously.</string>
    <string name="close_button_content_descriptor">Close button</string>
    <string name="upload_diagnosis">Upload diagnosis</string>
    <string name="exposure_title">Exposure</string>
    <string name="load_exposure_info">Load exposure details</string>
    <string name="stop">Stop</string>
    <plurals name="exposure_details">
        <item quantity="zero">No Recent Messages</item>
        <item quantity="one">For %d minute, %s distance</item>
        <item quantity="other">For %d minutes, %s distance</item>
    </plurals>
    <string name="far_exposure_distance">Far</string>
    <string name="close_exposure_distance">Close</string>
    <string name="near_exposure_distance">Near</string>
    <string name="exposure_summary">Days since last exposure: %d\nMatched keys: %d\nRisk level: %d\n</string>
    <string name="no_exposure">No Exposure</string>
    <string name="pha_permission_number">Your test number</string>
    <string name="upload">Upload</string>
    <string name="pha_permission_number_dialog_title">Provide test confirmation number</string>
    <string name="reset_all_data">Clear data</string>
    <string name="menu">Menu</string>
    <string name="powered_by">Powered by Covid Watch for</string>
    <string name="powered_by_logo_content_description">Arizona Department of Health Services</string>
    <string name="powered_by_content_description">Powered by Covid Watch for ADHS</string>
    <string name="title_exposures">Possible Exposures</string>
    <string name="exposures_notifications_on_subtitle">You will be notified of possible exposures to COVID-19. We recommend that this setting <b>remain on</b> until the pandemic is over.</string>
    <string name="exposures_notifications_off_subtitle">You will <b>not</b> be notified of possible exposures to COVID-19. This must be turned on for the app to work properly.</string>
    <string name="switch_exposure_notifications">Exposure Notifications</string>
    <string name="exposure_risk_icon_description">High risk of exposure</string>
    <string name="exposure_info_explanation">Each exposure notification is saved in this app and will be automatically deleted after 30 days.</string>
    <string name="empty_exposures_list"><b>No Exposures Detected</b>\nContinue to follow the guidance of\nthe Public Health Department and\ncheck back later for updates.</string>
    <string name="high_risk_exposure">&lt;b>High Risk:&lt;/b> %s</string>
    <string name="med_risk_exposure">&lt;b>Med Risk:&lt;/b> %s</string>
    <string name="low_risk_exposure">&lt;b>Low Risk:&lt;/b> %s</string>
    <string name="last_exposure_time">&lt;b>Last checked:&lt;/b> %s</string>
    <string name="under_development_risk_name">Under Development</string>
    <string name="no_exposures_risk_name">No Significant Exposures</string>
    <string name="high_risk_name">Significant Exposure Detected</string>
    <string name="verified_positive_risk_name">Verified Positive Diagnosis</string>
    <string name="title_exposure_details">Possible Exposure</string>
    <string name="exposure_details_subtitle">You were near someone who has shared a <b>positive</b> and <b>verified</b> diagnosis of COVID-19.</string>
    <string name="details">Details</string>
    <string name="btn_share_positive_diagnosis">Share a Positive Diagnosis</string>
    <string name="btn_find_covid_test_site">Find COVID-19 Test Site</string>
    <string name="exposure_information_date_title">Date</string>
    <string name="exposure_information_duration_title">Attenuation Duration</string>
    <string name="exposure_information_duration_thresholds_title">Attenuation Thresholds</string>
    <string name="exposure_information_duration_text">%d min</string>
    <string name="exposure_information_attenuation_title">Attenuation</string>
    <string name="exposure_information_total_risk_title">Total Risk Score</string>
    <string name="low_total_exposure_risk">Low: %d of 100</string>
    <string name="middle_total_exposure_risk">Middle: %d of 100</string>
    <string name="high_total_exposure_risk">High: %d of 100</string>
    <string name="exposure_information_transmission_risk_level_title">Transmission Risk Level</string>
    <string name="exposure_information_transmission_risk_text">%d of 8</string>
    <string name="share_positive_diagnosis_btn_explanation"><b>Have a positive diagnosis?</b>\nHelp stop the spread by anonymously notifying others of a possible exposure to COVID-19.</string>
    <string name="call_pha">Call the Public Health Department to get tested and receive help with shelter and food at 1–800-COVID19</string>
    <string name="monitor_symptoms">Monitor symptoms\nIsolate from others\nRest and take care</string>
    <string name="follow_guidance">Follow guidance from the\n<a href="https://www.covid-watch.org/">Center for Disease Control</a></string>
    <string name="next_steps">What to do next</string>
    <string name="enable_exposure_notifications_title">Enable\nExposure Notifications</string>
    <string name="enable_exposure_notifications_subtitle">These notifications will let you know if <b>you’ve been exposed</b> to a person who later reports themselves as having tested positive for COVID-19. It can be turned off at any time.</string>
    <string name="enable_button">Enable</string>
    <string name="not_now_button">Not now</string>
    <string name="notify_others_title">How to Share a Positive Diagnosis</string>
    <string name="notify_others_subtitle"><b>1</b> \n<b>2</b> Answer brief questions\n<b>3</b> Anonymously share diagnosis to help stop the spread by letting other app users get notified of possible exposure if they were nearby.</string>
    <string name="test_verification_code_warning">Where is my code?</string>
    <string name="share_positive_diagnosis_button">Anonymously Share Diagnosis</string>
    <string name="past_positive_diagnoses">View Shared Positive Diagnoses</string>
    <string name="thank_you_for_sharing_title">Thank You!</string>
    <string name="thank_you_for_sharing_text">You just helped to stop the spread of COVID-19 within your communities!\n\nContinue following the advice of the <b>Public Health Department</b> and share the app with family and friends so that they can also help stop the spread, too.</string>
    <string name="choose_sharing_method_dialog_title">Share your TEK(s) with</string>
    <string name="choose_sharing_method_dialog_message">Note: The TEK for the current day won\'t be shared with the server. When sharing with the server, you can set the transmission risk level only at the first upload.</string>
    <string name="choose_sharing_method_dialog_btn_server">Covid Watch server</string>
    <string name="choose_sharing_method_dialog_btn_other">Others…</string>
    <string name="diagnosis_shared_title">Diagnosis shared</string>
    <string name="diagnosis_shared_subtitle">Thank you for helping slow the spread of COVID-19 within your region.</string>
    <string name="diagnosis_shared_next_steps">To continue to help, keep the app installed until the pandemic is over and share it with friends and family so that they can help, too. </string>
    <string name="diagnosis_shared_art_content_description">Earth in a shape of heart</string>
    <string name="share_app_button">Share the App</string>
</resources>