<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_content">

    <ImageView
        android:id="@+id/close_button"
        style="@style/ImageView.BtnClose"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/TextView.ScreenTitle"
        android:text="@string/settings" />

    <TextView
        style="@style/TextView.ScreenSubtitle"
        android:text="@string/issues_needs_to_be_resolved" />

    <Button
        android:id="@+id/bluetooth_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/turn_on_bluetooth" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/turn_on_bluetooth_subtext"
        android:textAlignment="center" />

    <Button
        android:id="@+id/location_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/location_access_on" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_explanation_subtext"
        android:textAlignment="center" />

</LinearLayout>