<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/close_button"
            style="@style/ImageView.BtnClose"
            android:paddingHorizontal="@dimen/padding_normal"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_normal"
            android:text="@string/step_1_notify_others"
            android:textAllCaps="true" />

        <TextView
            style="@style/TextView.ScreenTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_normal"
            android:text="@string/notify_others_title"
            android:textSize="27sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_normal"
            android:lineSpacingExtra="2sp"
            android:text="@string/notify_others_subtitle"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_large"
            android:lineSpacingExtra="2sp"
            android:text="@string/test_verification_code_warning"
            android:textSize="16sp" />

        <Button
            android:id="@+id/share_positive_diagnosis_button"
            style="@style/Button.Action"
            android:layout_marginHorizontal="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_large"
            android:text="@string/share_positive_diagnosis_button" />

        <Button
            android:id="@+id/btn_view_past_positive_diagnoses"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_small"
            android:paddingVertical="@dimen/padding_small"
            android:text="@string/past_positive_diagnoses"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/subtitle_font_size" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/notify_others_art_1"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>